# distro-hunter

./: .gitignore  MISSING_DISTROS.md  README.md  Setup-DistroHunter.ps1  Update-Ventoy.ps1  config.example.json  examples_adaptive_connections.py  pyproject.toml  requirements.txt  test.bat
distro_hunter/: __init__.py  __main__.py  adaptive_download.py  backup.py  bootstrap_aria2.py  checksums.py  cli.py  config.py  connection_pool.py  connection_ui.py  core.py  downloads.py  exceptions.py  journal.py  models.py  plugin_generator.py  plugin_loader.py  plugin_metadata.py  run_lock.py  scoring.py  startup_checks.py  state.py  tui.py  url_utils.py  utils.py  ventoy.py  web.py
distro_hunter/plugins/: __init__.py  almalinux_gnome.py  alpine_standard.py  archlinux.py  chimeraos.py  common.py  debian_live_cinnamon.py  debian_live_debian_junior.py  debian_live_gnome.py  debian_live_kde.py  debian_live_lxde.py  debian_live_lxqt.py  debian_live_mate.py  debian_live_standard.py  debian_live_xfce.py  debian_netinst.py  edubuntu_lts.py  endeavouros.py  fedora_budgie.py  (+77 more)
scripts/: DistroHunter-Bootstrap.ps1
tests/: plugin_family_fixtures.py  test_backup.py  test_common_plugins.py  test_config.py  test_doctor.py  test_downloads.py  test_garuda_plugins.py  test_journal.py  test_plugin_families.py  test_plugin_generator.py  test_plugin_metadata.py  test_plugin_overrides.py  test_report.py  test_resilience.py  test_run_lock.py  test_scoring.py  test_startup_checks.py  test_state.py  test_systemrescue_plugin.py  test_tui.py  test_ubuntu_plugins.py  test_ventoy.py  test_web.py
