[project]
name = "distro-hunter"
version = "0.1.0"
description = "Windows-friendly Linux ISO discovery, download, and Ventoy sync tool."
requires-python = ">=3.12"
dependencies = [
    "rich>=13.9,<14",
    "textual>=0.62,<0.63",
]

[project.scripts]
distro-hunter = "distro_hunter.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
